# lac-cli

./: .gitignore  README.md  main.py  pyproject.toml  shell.py  wizard.py  ws_client.py
lac/: config.py  main.py  shell.py  wizard.py  ws_client.py
lac/mind/: db.py  debate.py  main.py  models.py  server.py
lac/mind/ui/: history.html  index.html  script.js  settings.html  setup.html
lac_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
server/: main.py  router.py
