[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lac-cli"
version = "0.1.0"
description = "AI-powered terminal shell with real-time autocomplete and natural language commands"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["terminal", "ai", "autocomplete", "shell", "cli"]

dependencies = [
    "prompt_toolkit>=3.0.0",
    "websockets>=12.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",       # pretty terminal output
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
lac = "lac.main:main"           # `lac` starts the shell
lac-server = "server.main:run"  # `lac-server` starts the ws server

[tool.setuptools.packages.find]
where = ["."]
include = ["lac*", "server*"]
